tests/ui/spirv-attr/capabilities/no_items.stderr
error: `#[spirv(capabilities())]` requires a list.
 --> $DIR/no_items.rs:4:9
  |
4 | #[spirv(capabilities)]
  |         ^^^^^^^^^^^^

error: aborting due to previous error

