tests/ui/spirv-attr/capabilities/no_items.rs
use spirv_std as _;

#[spirv(fragment)]
#[spirv(capabilities)]
//~^ ERROR `#[spirv(capabilities())]` requires a list.
pub fn main() { }

